--- a/package.json
+++ b/package.json
@@ -1,55 +1,21 @@
 {
-  "name": "ngx-rest-model-app",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "build_lib": "ng build --prod ngx-rest-model",
-    "npm_pack": "cd dist/ngx-rest-model && npm pack",
-    "package": "npm run build_lib && npm run npm_pack"
+  "name": "@popetech/ngx-rest-model",
+  "version": "0.0.1",
+  "peerDependencies": {
+    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
+    "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
   },
-  "private": true,
+  "main": "bundles/popetech-ngx-rest-model.umd.js",
+  "module": "fesm5/popetech-ngx-rest-model.js",
+  "es2015": "fesm2015/popetech-ngx-rest-model.js",
+  "esm5": "esm5/popetech-ngx-rest-model.js",
+  "esm2015": "esm2015/popetech-ngx-rest-model.js",
+  "fesm5": "fesm5/popetech-ngx-rest-model.js",
+  "fesm2015": "fesm2015/popetech-ngx-rest-model.js",
+  "typings": "popetech-ngx-rest-model.d.ts",
+  "metadata": "popetech-ngx-rest-model.metadata.json",
+  "sideEffects": false,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
-    "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
-    "zone.js": "~0.8.26"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular-devkit/build-ng-packagr": "~0.7.0",
-    "@angular/cli": "~6.1.5",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^3.0.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~5.0.1",
-    "tsickle": ">=0.29.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "tslib": "^1.9.0"
   }
 }
