--- a/projects/ngx-table/package.json
+++ b/projects/ngx-table/package.json
@@ -1,20 +1,12 @@
 {
   "name": "@popetech/ngx-table",
-  "description": "This library contains an Angualar 6 compatible Datatable component.",
-  "version": "6.1.0",
+  "description": "This library contains an Angular 8 compatible Datatable component.",
+  "version": "8.2.0",
   "private": false,
   "license": "MIT",
   "repository": "https://github.com/pope-tech/ngx-table",
   "peerDependencies": {
-    "@angular/core": "^6.1.0",
-    "@angular/common": "^6.1.0"
-  },
-  "ngPackage": {
-    "$schema": "./node_modules/ng-packagr/ng-package.schema.json",
-    "dest": "../../dist/ngx-table",
-    "workingDirectory": "./.ng_build",
-    "lib": {
-      "entryFile": "src/public_api.ts"
-    }
+    "@angular/common": "^8.0.0",
+    "@angular/core": "^8.0.0"
   }
 }
