--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/ngx-table-app",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -31,6 +32,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -139,7 +146,8 @@
           "configurations": {
             "production": {
               "project": "projects/ngx-table/ng-package.prod.json"
-            }
+            ,              "tsConfig": "projects/ngx-table/tsconfig.lib.prod.json"
+}
           }
         },
         "test": {
