--- a/package.json
+++ b/package.json
@@ -11,47 +11,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.1",
-    "@angular/common": "^8.2.1",
-    "@angular/compiler": "^8.2.1",
-    "@angular/core": "^8.2.1",
-    "@angular/forms": "^8.2.1",
-    "@angular/platform-browser": "^8.2.1",
-    "@angular/platform-browser-dynamic": "^8.2.1",
-    "@angular/router": "^8.2.1",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.5.4",
+    "@angular/animations": "^9.0.0",
+    "@angular/common": "^9.0.0",
+    "@angular/compiler": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "@angular/forms": "^9.0.0",
+    "@angular/platform-browser": "^9.0.0",
+    "@angular/platform-browser-dynamic": "^9.0.0",
+    "@angular/router": "^9.0.0",
+    "bootstrap": "^4.4.1",
+    "core-js": "^2.6.11",
     "font-awesome": "^4.7.0",
-    "highlight.js": "^9.12.0",
-    "lodash-es": "^4.17.4",
-    "ngx-md": "^8.0.0",
-    "rxjs": "^6.5.2",
-    "zone.js": "~0.9.1"
+    "highlight.js": "^9.18.1",
+    "lodash-es": "^4.17.15",
+    "ngx-md": "^8.1.6",
+    "rxjs": "^6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.802.1",
-    "@angular-devkit/build-ng-packagr": "~0.802.1",
-    "@angular/cli": "~8.2.1",
-    "@angular/compiler-cli": "^8.2.1",
-    "@angular/language-service": "^8.2.1",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
+    "@angular-devkit/build-angular": "~0.900.0",
+    "@angular-devkit/build-ng-packagr": "~0.900.0",
+    "@angular/cli": "~9.0.0",
+    "@angular/compiler-cli": "^9.0.0",
+    "@angular/language-service": "^9.0.0",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "json-server": "^0.15.1",
-    "karma": "^3.0.0",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^5.3.0",
-    "protractor": "~5.4.0",
+    "ng-packagr": "^9.0.0",
+    "protractor": "^5.4.3",
     "ts-node": "~5.0.1",
-    "tsickle": "^0.36.0",
-    "tslib": "^1.10.0",
     "tslint": "~5.9.1",
-    "typescript": "~3.5.3"
+    "typescript": "~3.7.5"
   }
 }
