--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@angular/platform-browser-dynamic": "^9.0.0",
     "@angular/router": "^9.0.0",
     "bootstrap": "^4.4.1",
-    "core-js": "^2.6.11",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.18.1",
     "lodash-es": "^4.17.15",
@@ -30,9 +29,9 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0",
-    "@angular-devkit/build-ng-packagr": "~0.900.0",
-    "@angular/cli": "~9.0.0",
+    "@angular-devkit/build-angular": "^0.900.1",
+    "@angular-devkit/build-ng-packagr": "^0.900.1",
+    "@angular/cli": "^9.0.1",
     "@angular/compiler-cli": "^9.0.0",
     "@angular/language-service": "^9.0.0",
     "@types/jasmine": "^2.8.16",
@@ -44,7 +43,7 @@
     "json-server": "^0.15.1",
     "karma": "^3.1.4",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.6",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^9.0.0",
