--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^11.2.14",
     "@angular/animations": "^11.2.14",
     "@angular/common": "^11.2.14",
     "@angular/compiler": "^11.2.14",
@@ -29,6 +28,8 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/core": "^11.2.14",
+    "@angular-devkit/build-angular": "^12.2.18",
     "@angular/cli": "^11.2.19",
     "@angular/compiler-cli": "^11.2.14",
     "@angular/language-service": "^11.2.14",
