--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^17.3.2",
     "@angular/animations": "^17.3.1",
     "@angular/common": "^17.3.1",
     "@angular/compiler": "^17.3.1",
@@ -19,9 +20,10 @@
     "@angular/platform-browser": "^17.3.1",
     "@angular/platform-browser-dynamic": "^17.3.1",
     "@angular/router": "^17.3.1",
+    "@types/highlight.js": "^10.1.0",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
-    "highlight.js": "^9.18.1",
+    "highlight.js": "^11.9.0",
     "lodash-es": "^4.17.15",
     "rxjs": "^6.5.4",
     "tslib": "^2.0.0",
@@ -29,24 +31,22 @@
   },
   "devDependencies": {
     "@angular-devkit/core": "^17.3.2",
-    "@angular-devkit/build-angular": "^17.3.2",
     "@angular/cli": "^17.3.2",
     "@angular/compiler-cli": "^17.3.1",
     "@angular/language-service": "^17.3.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "^5.1.2",
     "jasmine-spec-reporter": "~5.0.0",
-    "json-server": "^0.15.1",
+    "json-server": "^1.0.0-alpha.23",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "ng-packagr": "^17.3.0",
-    "protractor": "~7.0.0",
     "ts-node": "~5.0.1",
     "tslint": "~6.1.0",
     "typescript": "~5.4.3"
